--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>บันทึกพิกัดและเลือกโซนที่จอดรถ</title>
+  <title>ระบบบันทึกตำแหน่งการจอดรถในวิทยาลัยอาชีวศึกษาพิษณุโลก</title>
   <script>
     const DEPLOY_URL = 'https://script.google.com/macros/s/AKfycbyjuPn1ej9BrCo0Rnz3UPnN8uN_n_g6m-PrKGSbW1wxv7u_RM-e-rperYTAh_ZiEzn1/exec';
 
