--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 
   <select id="zone">
     <option value="">-- กรุณาเลือกโซน --</option>
-    <option value="โซน 1">โซน 1</option>
-    <option value="โซน 2">โซน 2</option>
-    <option value="โซน 3">โซน 3</option>
-    <option value="โซน 4">โซน 4</option>
-    <option value="โซน 5">โซน 5</option>
-    <option value="โซน 6">โซน 6</option>
-    <option value="โซน 7">โซน 7</option>
+    <option value="โซน1 หน้าอาคารห้องสมุด">โซน 1</option>
+    <option value="โซน 2 หลังอาคาร 9 งานวิชาการ">โซน 2</option>
+    <option value="โซน 3 หน้าแฟลตครุ">โซน 3</option>
+    <option value="โซน 4 หลังลานกิจกรรม Wi-Fi">โซน 4</option>
+    <option value="โซน 5 งานอาคารสถานที่ / ห้อง อวท.">โซน 5</option>
+    <option value="โซน 6 หน้าอาคาร 10 ห้องทวิภาคี">โซน 6</option>
+    <option value="โซน 7 หลังอาคารแผนกอาหาร">โซน 7</option>
   </select>
 
   <input type="text" id="name" placeholder="ชื่อของคุณ">
